# gps-kataster-obiektow-tatr

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  specyfikacja_gps_kataster_obiektow_tatr_v_2.md  tpn_otwory_jaskin.xlsx
.github/workflows/: build.yml  mutation.yml  release.yml  validate.yml
config/: .gitkeep  prefixes.yml
data/attachments/: .gitkeep
data/caves/: .gitkeep  C-0001.yml  C-0002.yml  C-0003.yml  C-0004.yml  C-0005.yml  C-0006.yml  C-0007.yml  C-0008.yml  C-0009.yml  C-0010.yml  C-0011.yml  C-0012.yml  C-0013.yml  C-0014.yml  C-0015.yml  C-0016.yml  C-0017.yml  C-0018.yml  C-0019.yml  C-0020.yml  C-0021.yml  C-0022.yml  C-0023.yml  C-0024.yml  C-0025.yml  C-0026.yml  C-0027.yml  C-0028.yml  C-0029.yml  C-0030.yml  C-0031.yml  C-0032.yml  C-0033.yml  C-0034.yml  C-0035.yml  C-0036.yml  C-0037.yml  C-0038.yml  C-0039.yml  (+965 more)
data/objects/: .gitkeep
data/objects/BIA/: BIA-0001.yml  BIA-0002.yml  BIA-0003.yml  BIA-0004.yml  BIA-0005.yml  BIA-0006.yml  BIA-0007.yml  BIA-0008.yml
data/objects/BRA/: BRA-0001.yml  BRA-0002.yml  BRA-0003.yml  BRA-0004.yml  BRA-0005.yml  BRA-0006.yml
data/objects/BYW/: BYW-0001.yml  BYW-0002.yml  BYW-0003.yml  BYW-0004.yml  BYW-0005.yml  BYW-0006.yml  BYW-0007.yml  (+37 more)
data/relations/: .gitkeep
data/shapes/: README.md  doliny.dbf  doliny.shp  doliny.shx  granica_polski.dbf  granica_polski.shp  granica_polski.shx  granica_slowacji.dbf  granica_slowacji.shp  granica_slowacji.shx
data/sources/: README.md
docs/: operations.md  release_artifacts.md
docs/asdlc/: backlog_v1.md  context.md  staging_review_decisions.md
schema/: .gitkeep  CHANGELOG.md  cave.schema.json  object.schema.json  relation.schema.json
scripts/: .gitkeep  assign_id.py  build_db.py  build_release_artifacts.py  export_best_measurements.py  profile_sources.py  validate.py
scripts/importers/: apply_review.py  import_pig.py  import_tpn.py
src/gps_kataster_obiektow_tatr/: __init__.py  best_measurement.py  best_measurements_export.py  build_db.py  coordinates.py  data_loader.py  pig_staging.py  prefix_resolver.py  release_artifacts.py  source_profile.py  source_table.py  staging_review.py  tpn_staging.py  validator.py
tests/: test_assign_id.py  test_best_measurement.py  test_best_measurements_export.py  test_build_db.py  test_ci_workflow.py  test_coordinates.py  test_data_loader.py  test_domain_fixtures.py  test_mutation_tooling.py  test_operational_docs.py  test_package.py  test_pig_staging.py  test_prefix_resolver.py  test_prefixes.py  test_release_artifacts.py  test_release_docs.py  test_schemas.py  test_source_profile.py  test_source_table.py  test_staging_review.py  test_tpn_staging.py  test_validator.py
tests/fixtures/: .gitkeep  cave-with-pig-and-nr-inwent.yml  object-with-manual-best.yml  object-with-tpn-globalid.yml  valid-cave.yml  valid-object.yml
(+961 files in other folders)
