[project]
name = "gps-kataster-obiektow-tatr"
version = "0.1.0"
description = "Git-native catalog of GPS/GNSS measurements for Tatra karst and cave objects."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "jsonschema>=4.23.0",
    "pyshp>=2.3.1",
    "pyyaml>=6.0.2",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gps_kataster_obiektow_tatr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
